fix: move vertical-align to td, th to avoid UA style dependency (#608)

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -248,13 +248,15 @@
   height: 100%;
   box-sizing: border-box;
   text-align: center;
-  vertical-align: middle;
+
   th {
     padding: 0;
     font-weight: 500;
+    vertical-align: middle;
   }
   td {
     padding: 0;
+    vertical-align: middle;
   }
 }
 
